package sk.fri.uniza;

/**
 * 27. 2. 2022 - 15:54
 *
 * @author richa
 */
public enum TypMimozemstana {

}
