@startuml

title __SPACE_INVADERS's Class Diagram__\n

  namespace A  {
    namespace k.fri.uniza {
      class sk.fri.uniza.App {
      }
    }
  }
  

  namespace B  {
    namespace k.fri.uniza {
      abstract class sk.fri.uniza.Bytost {
      }
    }
  }
  


    namespace k.fri.uniza {
      class sk.fri.uniza.Hrac {
      }
    }

  


    namespace k.fri.uniza {
      class sk.fri.uniza.HraciaPlocha {
      }
    }

  


    namespace k.fri.uniza {
      class sk.fri.uniza.Mimozemstan {
      }
    }

  


    namespace k.fri.uniza {
      enum Obtiaznost {
      }
    }

  


    namespace k.fri.uniza {
      class sk.fri.uniza.Parser {
      }
    }

  


    namespace k.fri.uniza {
      class sk.fri.uniza.Pozicia {
      }
    }

  


    namespace k.fri.uniza {
      class sk.fri.uniza.Raketa {
      }
    }

  


    namespace k.fri.uniza {
      enum TypMimozemstana {
      }
    }

  


    namespace k.fri.uniza {
      namespace gui {
        class sk.fri.uniza.gui.HraOkno {
        }
      }
    }

  


    namespace k.fri.uniza {
      namespace gui {
        class sk.fri.uniza.gui.Menu {
        }
      }
    }

  


    namespace k.fri.uniza {
      namespace gui {
        class sk.fri.uniza.gui.SettingOkno {
        }
      }
    }

  


    namespace k.fri.uniza {
      namespace gui {
        class sk.fri.uniza.gui.SpecifikaciaHracaDialog {
        }
      }
    }

  

  sk.fri.uniza.Bytost o-- sk.fri.uniza.Pozicia : pozicia
  sk.fri.uniza.Hrac -up-|> sk.fri.uniza.Bytost
  sk.fri.uniza.HraciaPlocha -up-|> javax.swing.JPanel
  sk.fri.uniza.Mimozemstan -up-|> sk.fri.uniza.Bytost
  sk.fri.uniza.Raketa o-- sk.fri.uniza.Pozicia : pozicia
  sk.fri.uniza.gui.HraOkno o-- sk.fri.uniza.HraciaPlocha : hraciaPlocha
  sk.fri.uniza.gui.HraOkno o-- sk.fri.uniza.HraciaPlocha.VykreslovaniePlochy : vykreslovacuThread
  sk.fri.uniza.gui.SpecifikaciaHracaDialog -up-|> javax.swing.JDialog


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
